cluster/apps/media/nntp-share/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nntp-share
  labels:
    app.kubernetes.io/name: nntp-share
